Add some more flexibility, * Allow to choose the certificate (default to the first cert found) * mail.log is now displayed inside the container log * Increase verbosity * Allow to set the smtp restrictions * Add a docker-compose file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 debug.sh
 sftp-config.json
 assets/domainkeys/mail.*
+
+assets/certs/*
+!assets/certs/readme
+
+assets/domainkeys/*
+!assets/domainkeys/readme
